--- a/app/views/presentation/hacemos.html.erb
+++ b/app/views/presentation/hacemos.html.erb
@@ -29,6 +29,21 @@ La Red Nacional de Aprendizaje y Servicio Chile a definido su rol a desempeñar 
 	<%end%>
 <%end%>
 
+
+<h1>Actas de reuniones de REASE:</h1>
+<div class="panel panel-default panelRease">
+	<div class="panel-heading">
+		Listado de actas
+	</div>
+	<div class="panel-body">
+		<% @minutes.each do |minute| %>
+			<p><%=minute.name%>: <%=minute.date%> - 
+			<%= link_to 'Ver acta', minute.archive.url %> 
+			</p>
+		<%end%>
+	</div>
+</div>
+
 <script type="text/javascript">
 <% contador = 1; %>
 	<% @sections.each do |seccion| %>
