--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -20,3 +20,5 @@
 
 <%= link_to "Ver listado de usuarios",  users_listarUsuarios_path, class:"btn btn-lg btnAdmin"%>
 
+<%= link_to "Administrar Actas",  minutes_path, class:"btn btn-lg btnAdmin"%>
+
