--- a/app/views/minutes/index.html.erb
+++ b/app/views/minutes/index.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div class="panel-body">
 		<% @minutes.each do |minute| %>
-			<p><%=minute.name%>: <%=minute.date%> - 
+			<p><%=minute.name%>: <%=l minute.date%> - 
 			<%= link_to 'Ver acta', minute.archive.url %> -
 			<%= link_to 'Detalle', minute %> -
 			<%= link_to 'Borrar acta', minute, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
